--- a/styles/styles.css
+++ b/styles/styles.css
@@ -15,6 +15,7 @@ html, body {
 }
 body {
     background-color: var(--yellow);
+    font-family: "Figtree",system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -33,4 +34,13 @@ body {
 img {
     width: var(--card-width);
     border-radius: 0.75rem;
+    margin-bottom: 1.5rem;
+}
+.tag {
+    font-weight: 800;
+    font-size: 0.9rem;
+    background-color: var(--yellow);
+    width: fit-content;
+    padding: 0.2rem 0.75rem;
+    border-radius: 0.2rem;
 }
