--- a/styles/styles.css
+++ b/styles/styles.css
@@ -43,4 +43,9 @@ img {
     width: fit-content;
     padding: 0.2rem 0.75rem;
     border-radius: 0.2rem;
+    margin-bottom: .8rem;
+}
+.date {
+    font-size: .88rem;
+    color: var(--gray-950);
 }
