--- a/styles/styles.css
+++ b/styles/styles.css
@@ -26,7 +26,7 @@ body {
     background-color: white;
     border-radius: 1.22rem;
     padding: 1.4rem;
-    outline: 0.063rem solid black;
+    border: 0.063rem solid black;
     box-shadow: 0.55rem 0.50rem 0 black;
     display: flex;
     flex-direction: column;
@@ -46,6 +46,7 @@ img {
     margin-bottom: .8rem;
 }
 .date {
-    font-size: .88rem;
+    font-size: .87rem;
     color: var(--gray-950);
+    margin-bottom: .7rem;
 }
