--- a/styles/styles.css
+++ b/styles/styles.css
@@ -7,13 +7,14 @@
     --yellow: hsl(47, 88%, 63%);
     --gray-500: hsl(0, 0%, 42%);
     --gray-950: hsl(0, 0%, 7%);
-    --card-width: 24rem;
+    --card-width: 24.1rem;
     --card-height: 32.5rem;
 }
 html, body {
     height: 100%;
 }
 body {
+    box-sizing: border-box;
     background-color: var(--yellow);
     font-family: "Figtree",system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     display: flex;
@@ -27,7 +28,7 @@ body {
     border-radius: 1.22rem;
     padding: 1.4rem;
     border: 0.063rem solid black;
-    box-shadow: 0.55rem 0.50rem 0 black;
+    box-shadow: 0.45rem 0.45rem 0 black;
     display: flex;
     flex-direction: column;
 }
@@ -38,15 +39,23 @@ img {
 }
 .tag {
     font-weight: 800;
-    font-size: 0.9rem;
+    font-size: 0.88rem;
     background-color: var(--yellow);
     width: fit-content;
-    padding: 0.2rem 0.75rem;
+    padding: 0.25rem 0.77rem;
     border-radius: 0.2rem;
-    margin-bottom: .8rem;
+    margin-bottom: .77rem;
 }
 .date {
     font-size: .87rem;
     color: var(--gray-950);
     margin-bottom: .7rem;
+}
+h1 {
+    margin-bottom: .77rem;
+    font-weight: 800;
+}
+.desc {
+    color: var(--gray-500);
+    font-size: 1rem;
 }
