--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,61 +1,76 @@
 @font-face {
-    font-family: "Figtree";
-    src: url(../assets/fonts/Figtree-VariableFont_wght.ttf) format(TrueType);
-    font-weight: 500 800;
+  font-family: "Figtree";
+  src: url(../assets/fonts/Figtree-VariableFont_wght.ttf) format(TrueType);
+  font-weight: 500 800;
 }
 :root {
-    --yellow: hsl(47, 88%, 63%);
-    --gray-500: hsl(0, 0%, 42%);
-    --gray-950: hsl(0, 0%, 7%);
-    --card-width: 24.1rem;
-    --card-height: 32.5rem;
+  --yellow: hsl(47, 88%, 63%);
+  --gray-500: hsl(0, 0%, 42%);
+  --gray-950: hsl(0, 0%, 7%);
+  --card-width: 24.1rem;
+  --card-height: 32.7rem;
 }
-html, body {
-    height: 100%;
+html,
+body {
+  height: 100%;
 }
 body {
-    box-sizing: border-box;
-    background-color: var(--yellow);
-    font-family: "Figtree",system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  background-color: var(--yellow);
+  font-family: "Figtree", system-ui, -apple-system, BlinkMacSystemFont,
+    "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
+    sans-serif;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .card {
-    width: var(--card-width);
-    height: var(--card-height);
-    background-color: white;
-    border-radius: 1.22rem;
-    padding: 1.4rem;
-    border: 0.063rem solid black;
-    box-shadow: 0.45rem 0.45rem 0 black;
-    display: flex;
-    flex-direction: column;
+  width: var(--card-width);
+  height: var(--card-height);
+  background-color: white;
+  border-radius: 1.22rem;
+  padding: 1.42rem;
+  border: 0.063rem solid black;
+  box-shadow: 0.45rem 0.45rem 0 black;
+  display: flex;
+  flex-direction: column;
 }
 img {
-    width: var(--card-width);
-    border-radius: 0.75rem;
-    margin-bottom: 1.5rem;
+  width: var(--card-width);
+  border-radius: 0.75rem;
+  margin-bottom: 1.5rem;
 }
 .tag {
-    font-weight: 800;
-    font-size: 0.88rem;
-    background-color: var(--yellow);
-    width: fit-content;
-    padding: 0.25rem 0.77rem;
-    border-radius: 0.2rem;
-    margin-bottom: .77rem;
+  font-weight: 800;
+  font-size: 0.88rem;
+  background-color: var(--yellow);
+  width: fit-content;
+  padding: 0.25rem 0.77rem;
+  border-radius: 0.2rem;
+  margin-bottom: 0.77rem;
 }
 .date {
-    font-size: .87rem;
-    color: var(--gray-950);
-    margin-bottom: .7rem;
+  font-size: 0.87rem;
+  color: var(--gray-950);
+  margin-bottom: 0.7rem;
 }
 h1 {
-    margin-bottom: .77rem;
-    font-weight: 800;
+  margin-bottom: 0.77rem;
+  font-weight: 800;
 }
 .desc {
-    color: var(--gray-500);
-    font-size: 1rem;
+  color: var(--gray-500);
+  font-size: 1rem;
+  margin-bottom: 1.38rem;
+}
+.author {
+  display: flex;
+  align-items: center;
+  gap: .77rem;
+  font-weight: 800;
+  font-size: .88rem;
+}
+.avatar {
+  width: 1.97rem;
+  height: 1.97rem;
+  margin-bottom: 0;
 }
