Add hover state

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -57,6 +57,10 @@ h1 {
   margin-bottom: 0.77rem;
   font-weight: 800;
 }
+h1:hover {
+    cursor: pointer;
+    color: var(--yellow);
+}
 .desc {
   color: var(--gray-500);
   font-size: 1rem;
